--- a/EEApp/Views/Shared/_Layout.cshtml
+++ b/EEApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <!-- Adapted from Shay Howe’s tutorial on Creating Lists -->
+                        <!-- https://learn.shayhowe.com/html-css/creating-lists/ -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="Index">Event</a>
                         </li>
